# PAAA

./: .dockerignore  .gitignore  AUTHENTICATION_GUIDE.md  FRONTEND_AUTH_INTEGRATION.md  PAAA-backend.rar  README.md  USER_ROLE_FIX.md  USER_ROLE_NULL_FIX.md  USER_UPDATE_IMPLEMENTATION.md  accesos.txt  docker-compose.yml
CONTAINERS/: .dockerignore  docker-compose.yml
CONTAINERS/agent/: agente.py  carga.py  estudiantes-ati.py  pyproject.toml
CONTAINERS/agent/datos/: egresados_20250622.xlsx
CONTAINERS/agent/etl/: db.py  io.py  survey_etl.py  utils.py  validators.py
CONTAINERS/db/: 01-init.sql
agent/: Dockerfile  agente.py  charts_local.py  pyproject.toml
agent/analytics/: results.py
agent/analytics/analytic_types/: general_summary.py  population_profile.py  question_detail.py
agent/app/: main.py  minio_utils.py
agent/etl/: README.md  __init__.py  survey_etl.py  utils.py
agente/: Dockerfile  agente.py  estudiantes-ati.r  pyproject.toml  utils.r
agente/backend/: Dockerfile
agente/datos/: profesores_20250622.xlsx
agente/inputs/: MetaDatos_ati.xlsx
backend/: .env  .env.example  Dockerfile  README.md  STATISTICS_API.md  docker-compose.backend.yml  docker-compose.yml  requirements.txt
backend/Temporal/: main.py  prueba_general.py  pruebas.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  minio_client.py  security.py
backend/app/models/: __init__.py  actions.py  audit.py  prc.py  proc.py  (+1 more)
db/: 01-init.sql  02-users.sql  03-update-passwords.sql
db/etl/: 03-etl.sql
db/users/: 01-init.sql  02-users.sql
frontend/: .env  Dockerfile  INTEGRATION_GUIDE.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
minio/: init.sh
scripts/: load-users.sh
updated-agent/: docker-compose.yml
updated-agent/agent/: Dockerfile  agente.py
(+46 files in other folders)
