[tool.poetry]
name = "acreditacion-viz"
version = "0.1.0"
description = ""
authors = ["Kenneth Obando"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
radian = "^0.6.12"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.6"
langchain-chroma = "^0.1.0"
bs4 = "^0.0.2"
transformers = "^4.40.1"
accelerate = "^0.29.3"
einops = "^0.8.0"
sentence-transformers = "^2.7.0"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
langchain-nomic = "^0.0.2"
openai = "^1.37.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
