[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Agente de Análisis de Encuestas"
authors = ["Migue <mcuberov14gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.40"
pandas = "^2.2"
openpyxl = "^3.1"
matplotlib = "^3.9"
python-dotenv = "^1.0"
langchain = "^0.3.27"
langchain-community = "^0.3.31"
langchain-openai = "^0.3.35"
pydantic = "^2.12.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
minio = "^7.2.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
